--- a/app/pages/generator.html
+++ b/app/pages/generator.html
@@ -18,7 +18,17 @@
                     <label for="image-upload" class="form-label">Upload an image:</label>
                     <input type="file" id="image-upload" class="form-input" accept="image/*">
                 </div>
-                
+
+                <div class="form-group">
+                    <label for="model-select" class="form-label">Select model:</label>
+                <select id="model-select" class="form-input" name="model">
+                    <option value="ALAE">ALAE</option>
+                    <option value="ALAE_LightSB_ffhq">ALAE_LightSB_FFHQ</option>
+                    <option value="ALAE_LightSB_utkface">ALAE_LightSB_UTKFace</option>
+                    <option value="Stable Diffusion">Stable Diffusion</option>
+                </select>
+                </div>
+
                 <button type="submit" class="generate-btn">Generate</button>
             </form>
 
